@@ -2902,7 +2902,11 @@ fillGap <- function(x, method=c("linear"), rule=1)
 }
 
 
-#' Add a Column to the Data Slot of an Oce object
+#' Add a Column to the Data Slot of an Oce object [DEPRECATED]
+#'
+#' \strong{Warning:} this function will be removed soon;
+#' see \link{oce-deprecated}. The more powerful function
+#' \code{\link{oceSetData}} should be used instead.
 #'
 #' If there is already a column with the given name, its contents are replaced
 #' by the new value.
@@ -2914,15 +2918,11 @@ fillGap <- function(x, method=c("linear"), rule=1)
 #' @return An object of \code{\link[base]{class}} \code{oce}, with a new
 #' column.
 #' @author Dan Kelley
-#' @seealso \code{\link{ctdAddColumn}} does a similar thing for \code{ctd}
-#' objects, and is in fact called, if \code{x} is of class \code{ctd}.
-#' @examples
-#' library(oce)
-#' data(ctd) 
-#' st <- swSigmaTheta(ctd[["salinity"]], ctd[["temperature"]], ctd[["pressure"]])
-#' new <- addColumn(ctd, st, "sigmaTheta")
+#' @seealso Please use \code{\link{oceSetData}} instead of the present function.
 addColumn <- function (x, data, name)
 {
+    .Deprecated("oceSetData",
+                msg="addColumn() will be removed soon; use oceSetData() instead. See ?'oce-deprecated'.")
     if (!inherits(x, "oce"))
         stop("method is only for oce objects")
     if (missing(data))
