@@ -17,10 +17,12 @@ up-to-date.
 Several \sQuote{oce} functions are marked "deprecated" in the present
 release of oce. Please use the replacement functions as listed below.
 
-\tabular{lll}{ \strong{Deprecated} \tab \strong{Replacement} \tab
-\strong{Notes}\cr \code{mapZones} \tab \code{\link{mapGrid}} \tab Improve
-name sensibility\cr \code{mapMeridians} \tab \code{\link{mapGrid}} \tab
-Improve name sensibility\cr }
+\tabular{lll}{
+\strong{Deprecated} \tab \strong{Replacement}     \tab \strong{Notes}\cr
+\code{mapZones}     \tab \code{\link{mapGrid}}    \tab Improve name sensibility\cr
+\code{mapMeridians} \tab \code{\link{mapGrid}}    \tab Improve name sensibility\cr
+\code{addColumn}    \tab \code{\link{oceSetData}} \tab Deprecated 2016-08-01\cr
+}
 
 The next CRAN release of \sQuote{oce} will have these functions flagged as
 "defunct", which will mean that trying to use them will generate an error
