@@ -1,4 +1,5 @@
 0.9-20
+- addColumn() marked as deprecated
 - read.cm.s4() reads all data in file
 - as.cm() added
 - read.odf() handles Aanderaa current meter data
